--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+    volumes:
+      - ./../auth-app/data:/app/auth-app/data
     ports:
       - "5000:5000"
 
